CHANGELOG for smartmontools

$Id: CHANGELOG,v 1.61 2002/11/28 09:02:55 ballen4705 Exp $

Copyright (C) 2002 Bruce Allen <smartmontools-support@lists.sourceforge.net>

Home page of code is: http://smartmontools.sourceforge.net

This program is free software; you can redistribute it and/or modify it
under the terms of the GNU General Public License as published by the Free
Software Foundation; either version 2, or (at your option) any later
version.

You should have received a copy of the GNU General Public License (for
example COPYING); if not, write to the Free Software Foundation, Inc., 675
Mass Ave, Cambridge, MA 02139, USA.

This code was originally developed as a Senior Thesis by Michael Cornwell
at the Concurrent Systems Laboratory (now part of the Storage Systems
Research Center), Jack Baskin School of Engineering, University of
California, Santa Cruz. http://ssrc.soe.ucsc.edu/

Maintainers/Developers Key:
[BA} Bruce Allen            <smartmontools-support@lists.sourceforge.net>
[EB] Erik Inge Bolso        <knan@mo.himolde.no>
[SB] Stanislav Brabec       <sbrabec@suse.cz>
[PC] Peter Cassidy          <pcassidy@mac.com>
[FM] Frederic L. W. Meunier <0@pervalidus.net>
[PW] Phil Williams          <phil@subbacultcha.demon.co.uk>

NOTES FOR FUTURE RELEASES: see TODO file.

CURRENT RELEASE (see VERSION file in this directory):

  [BA] smartctl: The -O option to enable an Immediate off-line test
  did not print out the correct time that the test would take to
  complete.  This is because the test timer is volatile and not
  fixed.  This has been fixed, and the smartctl.8 man page has been
  updated to explain how to track the Immediate offline test as it
  progresses, and to further emphasize the differences between the
  off-line immediate test and the self-tests.

  [BA] smartd/smartctl: Added new attribute (200) Multi_Zone_Error_Rate

  [BA] smartctl: modified so that arguments could have either a single -